the flexCenterColumn div was getting way too small for the screen size, thus shrinking the content. fixed.

--- a/products-shop/public/styles/default.css
+++ b/products-shop/public/styles/default.css
@@ -110,6 +110,16 @@ body {
     transform: rotate(360deg);
   }
 }
+
+@media (max-width: 1140px) {
+
+  .flexCenterColumn {
+
+    width: 80vw;
+  }
+
+}
+
 @media (max-width: 431px) {
 
   .flexCenterColumn {
